[package]
name = "geoviewer"
version = "0.1.0"
authors = ["Willem Verstraeten <willem.verstraeten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.24"
wgpu = "*"
imgui = "*"
imgui-wgpu = "*"
shaderc = "*"
imgui-winit-support = "*"
bytemuck = "*"
crossbeam = "*"
glam = "*"
image = "*"

[dependencies.futures]
version = "*"
features = ["executor", "thread-pool"]
