[package]
name = "geoviewer"
version = "0.1.0"
authors = ["Willem Verstraeten <willem.verstraeten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25"
wgpu = "*"
imgui = "*"
imgui-wgpu = "*"
shaderc = "*"
bytemuck = "*"
crossbeam = "*"
glam = "*"
image = "*"

[dependencies.futures]
version = "*"
features = ["executor", "thread-pool"]

[dependencies.imgui-winit-support]
version = "0.7.1"
features = ["winit-25"]
default-features = false