[package]
name = "geoviewer"
version = "0.1.0"
authors = ["Willem Verstraeten <willem.verstraeten@gmail.com>"]
edition = "2018"
resolver="2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25"
wgpu = "*"
imgui = "*"
imgui-wgpu = "*"
naga = "*"
bytemuck = "*"
crossbeam = "*"
glam = { version = "*", features = ["bytemuck"] }
image = "*"

[dependencies.futures]
version = "*"
features = ["executor", "thread-pool"]

[dependencies.imgui-winit-support]
version = "0.8.0"
features = ["winit-25"]
default-features = false

[profile.dev.package.png]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[profile.dev.package.image]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16